[package]
name = "co_slog"
version = "1.0.0"
authors = ["Xudong Huang<huangxu008@hotmail.com>"]
description = "Coroutine Logging scopes for slog-rs"
keywords = ["slog", "logging", "slog", "log", "coroutine"]
license = "MPL-2.0/MIT/Apache-2.0"
documentation = "https://docs.rs/slog-scope"
homepage = "https://github.com/slog-rs/slog"
repository = "https://github.com/slog-rs/scope"
readme = "README.md"

[lib]
path = "lib.rs"

[dependencies]
slog = "2"
may = { git = "ssh://git@gitlab.com/Xudong-Huang/may.git" }

# [dev-dependencies]
slog-term = "~2.0.0-4"
slog-async = "2"


