[package]
name = "co_slog"
version = "1.0.0"
authors = ["Xudong Huang<huangxu008@hotmail.com>"]
description = "Coroutine Logging scopes for slog-rs"
keywords = ["slog", "logging", "slog", "log", "coroutine"]
license = "MPL-2.0/MIT/Apache-2.0"
documentation = "https://docs.rs/slog-scope"
homepage = "https://github.com/slog-rs/slog"
repository = "https://github.com/slog-rs/scope"
readme = "README.md"

[dependencies]
may = { git = "ssh://git@gitlab.com/Xudong-Huang/may.git" }
slog = "2"
regex = "0.2"
slog-term = "2"
lazy_static = "0.2"
[dev-dependencies]
slog-async = { git = "https://github.com/Xudong-Huang/async.git" }


